fix(e2e): build backend before starting it

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -69,6 +69,9 @@ jobs:
       - name: Run backend e2e
         run: pnpm --filter @joker/backend test:e2e
 
+      - name: Build Backend
+        run: pnpm --filter @joker/backend build
+
       - name: Start Backend for Frontend tests
         run: |
           pnpm --filter @joker/backend start &
