--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.10.0",
     "prettier": "^3.2.0",
     "rimraf": "^5.0.5",
+    "socket.io-client": "^4.7.0",
     "typescript": "^5.3.0"
   },
   "engines": {
