--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@telegram-apps/sdk-react": "^1.0.0",
+    "framer-motion": "^12.29.0",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
