--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^4.0.18"
   }
 }
