--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,8 +25,11 @@
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/schedule": "^6.1.0",
     "@nestjs/serve-static": "^5.0.4",
     "@nestjs/websockets": "^10.3.0",
+    "@prisma/client": "^7.3.0",
+    "@types/cron": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ioredis": "^5.3.0",
@@ -50,6 +53,7 @@
     "eslint-plugin-prettier": "^5.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.0",
+    "prisma": "^7.3.0",
     "rimraf": "^5.0.5",
     "socket.io-client": "^4.7.0",
     "source-map-support": "^0.5.21",
