fix(backend): update production start script path for monorepo structure
Update Dockerfile CMD and package.json start:prod script to use correct
path for monorepo build output structure where compiled files are located
at dist/apps/backend/src/main.js instead of dist/main.js

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -74,6 +74,6 @@ COPY --from=build /app/apps/backend/package.json ./package.json
 EXPOSE 3000
 # Update entrypoint to match NestJS build output structure
 # When running from root, 'nest build' outputs to dist/
-# BUT in Docker we copy apps/backend/dist to ./dist
-# So structure inside container is /app/dist/main.js
-CMD [ "node", "dist/main" ]
+# In monorepo with shared libs, tsc preserves directory structure:
+# dist/apps/backend/src/main.js
+CMD [ "node", "dist/apps/backend/src/main" ]
