feat(backend): integrate ConfigService for database URL configuration
- Update PrismaService to use ConfigService for DATABASE_URL
- Add ConfigService mock to game audit and cleanup service tests
- Configure datasource URL through NestJS config service
- Add build step to e2e workflow for backend compilation

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -77,6 +77,7 @@ jobs:
         run: pnpm --filter @joker/backend test:e2e
 
       - name: Build Backend
+        run: pnpm --filter @joker/backend build
 
       - name: Start Backend for Frontend tests
         run: |
