chore(docker): bust cache for Prisma 7.x engineType fix

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -26,6 +26,7 @@ RUN pnpm --filter @joker/shared build
 
 # 1.5. Generate Prisma Client (CRITICAL for types)
 # We must run this before building the backend so the types exist
+# Cache bust: 2026-01-25T16:40 - Prisma 7.x engineType fix
 WORKDIR /app/apps/backend
 RUN npx prisma generate
 WORKDIR /app
