--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,8 +98,52 @@ jobs:
           cache-from: type=gha,scope=frontend
           cache-to: type=gha,mode=max,scope=frontend
 
+  build-admin:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Lowercase repo name
+        run: |
+          echo "IMAGE_NAME=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Admin
+        id: meta-admin
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-admin
+          tags: |
+            type=raw,value=latest
+            type=sha
+
+      - name: Build and push Admin Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/admin/Dockerfile
+          push: true
+          tags: ${{ steps.meta-admin.outputs.tags }}
+          labels: ${{ steps.meta-admin.outputs.labels }}
+          cache-from: type=gha,scope=admin
+          cache-to: type=gha,mode=max,scope=admin
+
   deploy:
-    needs: [build-backend, build-frontend]
+    needs: [build-backend, build-frontend, build-admin]
     runs-on: ubuntu-latest
 
     steps:
@@ -135,6 +179,10 @@ jobs:
             sed -i 's|DOCKER_REGISTRY=.*|DOCKER_REGISTRY=ghcr.io|' .env
             sed -i 's|DOCKER_IMAGE_BACKEND=.*|DOCKER_IMAGE_BACKEND=${{ env.IMAGE_NAME }}-backend|' .env
             sed -i 's|DOCKER_IMAGE_FRONTEND=.*|DOCKER_IMAGE_FRONTEND=${{ env.IMAGE_NAME }}-frontend|' .env
+            sed -i 's|DOCKER_IMAGE_ADMIN=.*|DOCKER_IMAGE_ADMIN=${{ env.IMAGE_NAME }}-admin|' .env
+
+            # Ensure DOCKER_IMAGE_ADMIN exists in .env
+            grep -q 'DOCKER_IMAGE_ADMIN' .env || echo "DOCKER_IMAGE_ADMIN=${{ env.IMAGE_NAME }}-admin" >> .env
 
             # Pull and restart
             docker compose -f docker-compose.prod.yml pull
