fix(admin): regenerate Prisma client in deploy stage

--- a/apps/admin/Dockerfile
+++ b/apps/admin/Dockerfile
@@ -17,7 +17,7 @@ COPY . .
 COPY --from=dependencies /app/node_modules ./node_modules
 COPY --from=dependencies /app/apps/admin/node_modules ./apps/admin/node_modules
 
-# Generate Prisma client
+# Generate Prisma client FIRST
 WORKDIR /app/apps/admin
 RUN pnpm exec prisma generate
 
@@ -28,17 +28,25 @@ RUN pnpm exec tsc
 WORKDIR /app
 RUN pnpm --filter @joker/admin deploy --prod /app/pruned
 
+# Copy generated Prisma client to pruned node_modules
+# pnpm deploy doesn't include generated files, so we copy them manually
+RUN cp -r /app/node_modules/.pnpm/@prisma+client*/node_modules/.prisma /app/pruned/node_modules/.prisma 2>/dev/null || \
+    cp -r /app/node_modules/.prisma /app/pruned/node_modules/.prisma 2>/dev/null || true
+
 FROM base AS deploy
 WORKDIR /app
 
-# Copy production bundle
+# Copy production bundle (includes node_modules with Prisma client)
 COPY --from=build /app/pruned ./
 
-# Copy built dist (not included in deploy)
+# Copy built dist
 COPY --from=build /app/apps/admin/dist ./dist
 
 # Copy prisma schema
 COPY --from=build /app/apps/admin/prisma ./prisma
+
+# Generate Prisma client in deploy stage to ensure it's properly initialized
+RUN npm install -g prisma@6.19.2 && prisma generate && npm uninstall -g prisma
 
 EXPOSE 3001
 CMD ["node", "dist/index.js"]
