fix(admin): standalone install without workspace for Docker

--- a/apps/admin/Dockerfile
+++ b/apps/admin/Dockerfile
@@ -3,22 +3,19 @@ ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 RUN corepack enable
 
-FROM base AS dependencies
-WORKDIR /app
-COPY pnpm-lock.yaml package.json pnpm-workspace.yaml ./
-COPY apps/admin/package.json ./apps/admin/
-
-# Install ALL dependencies (including devDependencies for AdminJS bundling)
-RUN pnpm install --frozen-lockfile
-
 FROM base AS build
 WORKDIR /app
-COPY . .
-COPY --from=dependencies /app/node_modules ./node_modules
-COPY --from=dependencies /app/apps/admin/node_modules ./apps/admin/node_modules
+
+# Copy only admin package files
+COPY apps/admin/package.json ./package.json
+COPY apps/admin/prisma ./prisma
+COPY apps/admin/src ./src
+COPY apps/admin/tsconfig.json ./tsconfig.json
+
+# Install deps directly (not in workspace mode)
+RUN pnpm install
 
 # Generate Prisma client
-WORKDIR /app/apps/admin
 RUN pnpm exec prisma generate
 
 # Build TypeScript
@@ -27,16 +24,10 @@ RUN pnpm exec tsc
 FROM base AS deploy
 WORKDIR /app
 
-# Copy built dist
-COPY --from=build /app/apps/admin/dist ./dist
-
-# Copy prisma schema
-COPY --from=build /app/apps/admin/prisma ./prisma
-
-# Copy package.json for node to resolve type:module
-COPY --from=build /app/apps/admin/package.json ./package.json
-
-# Copy FULL node_modules (AdminJS needs all deps including devDeps for bundling)
+# Copy everything from build
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/prisma ./prisma
+COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/node_modules ./node_modules
 
 EXPOSE 3001
