--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -23,5 +23,25 @@
     "prisma": "^6.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.3.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@tiptap/core": "2.1.13",
+      "@tiptap/pm": "2.1.13",
+      "@tiptap/extension-bold": "2.1.13",
+      "@tiptap/extension-italic": "2.1.13",
+      "@tiptap/extension-strike": "2.1.13",
+      "@tiptap/extension-history": "2.1.13",
+      "@tiptap/extension-gapcursor": "2.1.13",
+      "@tiptap/extension-list-item": "2.1.13",
+      "@tiptap/extension-paragraph": "2.1.13",
+      "@tiptap/extension-blockquote": "2.1.13",
+      "@tiptap/extension-code-block": "2.1.13",
+      "@tiptap/extension-dropcursor": "2.1.13",
+      "@tiptap/extension-hard-break": "2.1.13",
+      "@tiptap/extension-bullet-list": "2.1.13",
+      "@tiptap/extension-ordered-list": "2.1.13",
+      "@tiptap/extension-horizontal-rule": "2.1.13"
+    }
   }
 }
