--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "bundle": "tsx src/bundle.ts",
+    "build": "tsc && pnpm run bundle",
     "start": "node dist/index.js"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "express-session": "^1.19.0"
   },
   "devDependencies": {
+    "@adminjs/bundler": "^3.0.0",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.2",
     "@types/node": "^20.10.0",
