--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@adminjs/design-system": "^4.1.1",
     "@adminjs/express": "^6.1.1",
     "@adminjs/prisma": "^5.0.4",
     "@prisma/client": "^6.0.0",
@@ -22,6 +23,9 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.2",
     "@types/node": "^20.10.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/styled-components": "^5.1.36",
     "prisma": "^6.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.3.0"
