--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prettier": "^3.2.0",
     "rimraf": "^5.0.5",
     "socket.io-client": "^4.7.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.9.3",
+    "typescript-language-server": "^5.1.3"
   },
   "engines": {
     "node": ">=20.0.0",
@@ -50,5 +51,8 @@
       "@tiptap/extension-ordered-list": "2.1.13",
       "@tiptap/extension-horizontal-rule": "2.1.13"
     }
+  },
+  "dependencies": {
+    "oh-my-opencode-windows-x64": "^3.1.0"
   }
 }
