--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clean": "pnpm run --parallel clean && rimraf node_modules"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.13",
     "@types/node": "^20.10.0",
     "prettier": "^3.2.0",
     "rimraf": "^5.0.5",
