feat(backend): add Telegram Bot integration with grammy
- Add TelegramBotModule with /start and /help commands
- WebApp button opens Mini App at WEBAPP_URL
- Graceful shutdown support
- Update .env.example with WEBAPP_URL
- Document dev workflow with Cloudflare Tunnel in BACKLOG.md

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,10 @@ POSTGRES_DB=joker_db
 # Telegram Bot (for auth validation)
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 
+# Telegram Mini App URL (ngrok for dev, domain for prod)
+# For development with ngrok: WEBAPP_URL=https://abc123.ngrok.io
+WEBAPP_URL=https://your-domain.com
+
 # Game settings (optional overrides)
 TURN_TIMEOUT_MS=30000
 RECONNECT_TIMEOUT_MS=30000
