--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "grammy": "^1.39.3",
     "ioredis": "^5.3.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
