--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -35,7 +35,7 @@ services:
     image: ${DOCKER_REGISTRY}/${DOCKER_IMAGE_FRONTEND}:latest
     restart: always
     ports:
-      - '80:80'
+      - '8080:80' # nginx reverse proxy on 80/443
     depends_on:
       - backend
       - admin
