--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,7 +12,12 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@telegram-apps/sdk-react": "^1.0.0",
+    "@telegram-apps/bridge": "^2.11.0",
+    "@telegram-apps/sdk": "^3.3.9",
+    "@telegram-apps/sdk-react": "^3.3.9",
+    "@telegram-apps/toolkit": "^2.1.3",
+    "@telegram-apps/transformers": "^2.2.6",
+    "@telegram-apps/types": "^2.0.3",
     "framer-motion": "^12.29.0",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
