ci(e2e): add NODE_ENV=test to E2E workflow and test configs
Add NODE_ENV=test environment variable to GitHub Actions E2E workflow, Playwright config, and update game gateway to support query param auth in test environments. This ensures consistent test environment detection across CI and local E2E runs, enabling proper authentication bypass for automated testing.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -36,6 +36,7 @@ jobs:
 
     env:
       SKIP_AUTH: true
+      NODE_ENV: test
       REDIS_URL: redis://localhost:6379
       DATABASE_URL: postgresql://joker:joker_secret@localhost:5432/joker_db
 
@@ -99,6 +100,7 @@ jobs:
 
           # Explicitly export env vars
           export SKIP_AUTH=true
+          export NODE_ENV=test
           export REDIS_URL=redis://localhost:6379
           export DATABASE_URL=postgresql://joker:joker_secret@localhost:5432/joker_db
 
