--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -114,3 +114,13 @@ jobs:
 
       - name: Run frontend e2e
         run: pnpm --filter @joker/frontend test:e2e
+
+      - name: Upload test artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: e2e-test-results
+          path: |
+            apps/frontend/test-results/
+            apps/frontend/playwright-report/
+          retention-days: 7
