--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -28,4 +28,9 @@ COPY --from=build /app/apps/frontend/dist /usr/share/nginx/html
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
+
+# Add healthcheck for reliability
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
+
 CMD ["nginx", "-g", "daemon off;"]
