ci: optimize workflows and remove legacy dependency overrides
Add Playwright browser caching to e2e workflow to reduce CI execution time
Skip deployment on documentation-only changes to avoid unnecessary builds
Remove hardcoded tiptap version overrides from admin package.json

The Playwright caching strategy checks for existing browser installations
and only installs OS dependencies when cache is hit, significantly
reducing e2e job duration on repeat runs.

The deploy workflow now ignores markdown files, docs directory, LICENSE
and .gitignore changes to prevent redundant deployments for non-code
changes.

The tiptap overrides in admin/package.json are no longer needed as
dependency conflicts have been resolved upstream.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -66,8 +66,25 @@ jobs:
           cd apps/backend
           npx prisma generate
 
+      - name: Get installed Playwright version
+        id: playwright-version
+        run: echo "PLAYWRIGHT_VERSION=$(pnpm list --filter @joker/frontend --depth=0 | grep @playwright/test | awk '{print $2}')" >> $GITHUB_ENV
+
+      - name: Cache Playwright browsers
+        uses: actions/cache@v3
+        id: playwright-cache
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
+          restore-keys: |
+            ${{ runner.os }}-playwright-
+
       - name: Install Playwright browsers
         run: pnpm --filter @joker/frontend exec playwright install --with-deps
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
+      - name: Install Playwright browsers (OS deps only)
+        run: pnpm --filter @joker/frontend exec playwright install-deps
+        if: steps.playwright-cache.outputs.cache-hit == 'true'
 
       - name: Run Database Migrations
         run: |
