feat(game): add random start player for tuzovanie and improve animation timing
Implement random starting player index for tuzovanie card dealing to increase fairness and unpredictability. Add startIndex and startPlayerId tracking throughout the game flow from backend to frontend.

Adjust tuzovanie animation timing (340ms card delay, 2400ms buffer) for better visual clarity and prevent UI overlap during the dealing sequence. Hide player hand and betting modal during tuzovanie animation to reduce distraction.

Update scoring service comments to clarify "popular" variant premium rules. Fix deploy workflow IMAGE_NAME and add PLAYWRIGHT_VERSION environment variable to e2e workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  # IMAGE_NAME will be set dynamically in lowercase
+  IMAGE_NAME: tma-game-joker
 
 jobs:
   build-backend:
