--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,9 @@ nginx.conf.temp
 # Empty directory artifacts
 -p/
 
-# Design/concept assets (optional - uncomment if needed)
-# image.webp
-# Концепт_стола.webp
+# Design/concept assets
+image.webp
+Концепт_стола.webp
 
 # Development documentation
 AGENTS.md
@@ -99,6 +99,9 @@ apps/frontend/package-lock.json
 apps/backend/scripts/e2e-simple.js
 apps/backend/src/game/AGENTS.md
 apps/frontend/src/components/AGENTS.md
+
+# Backend public test client
+apps/backend/public/index.html
 
 # Debug UI components
 apps/frontend/src/components/DevLogPanel.tsx
